Version 1.3.1
    * not yet released
    * Ctrl+= shortcut for + zoom in webview
    * Ctrl+Enter shortcut in PIM plugin now also works with enter on numpad
    * fixed ' and " chars in speed dial's input fields
    * fixed zooming with Ctrl+Wheel for some users
    * fixed issues with cookies filtering
    * fixed $subdocument matching in AdBlock
    * fixed $third-party in AdBlock rules when Referer header is empty
    * fixed issue with notifications settings always reverting to osd notifications
    * fixed downloading UTF-8 subscriptions in AdBlock (eg. Ru Adlist)

Version 1.3.0
    * released 11 July 2012
    * new Ukrainian translation
    * new plugins: GreaseMonkey and PIM (Personal Information Manager)
    * new command line option to open new window with url
    * can now open .xhtml files from open file dialog
    * added animated tab previews with option to turn animations off
    * possibility to change icon of bookmarks
    * ssl manager now can import own certificate
    * clear recent history now remembers last checked options
    * new urlbar completion widget can now show also entries from bookmarks
    * little changes in speed dial's preferences
    * support for 3rd party subscriptions in AdBlock
    * improved performance of AdBlock rules matching
    * possibility to add subscriptions with loading abp: links
    * private browsing is now opened in new window and new process
    * improved AdBlock dialog distinguish rule types with colors
    * popup windows now have loading animation in urlbar
    * new gif for loading animation (spinner)
    * possibility to add RSS feed into external reader
    * option to specify preferred behaviour when opening new tab
    * inverting preferred new tab behaviour with shift modifier (eg. shift+middle click on link)
    * better support for Content-Disposition header (downloads)
    * Linux: middle clicking on add tab button will open new tab with global mouse selection's contents