@@ -37,6 +37,7 @@ private:
     void update100();
     void update118();
     void update120();
+    void update130();
 
     QString m_profilePath;
 };
