@@ -79,7 +79,7 @@
 #include <QWebHistory>
 #include <QMessageBox>
 
-const QString QupZilla::VERSION = "1.3.0";
+const QString QupZilla::VERSION = "1.3.1";
 const QString QupZilla::BUILDTIME =  __DATE__" "__TIME__;
 const QString QupZilla::AUTHOR = "David Rosca";
 const QString QupZilla::COPYRIGHT = "2010-2012";
