@@ -64,7 +64,7 @@ bool PIM_Plugin::testPlugin()
 {
     // Let's be sure, require latest version of QupZilla
 
-    return (QupZilla::VERSION == "1.3.0");
+    return (QupZilla::VERSION == "1.3.1");
 }
 
 QTranslator* PIM_Plugin::getTranslator(const QString &locale)
