@@ -1,7 +1,8 @@
 Version 1.3.1
-    * not yet released
+    * 16 July 2012
     * Ctrl+= shortcut for + zoom in webview
     * Ctrl+Enter shortcut in PIM plugin now also works with enter on numpad
+    * don't append QupZilla string to changed user agent
     * fixed ' and " chars in speed dial's input fields
     * fixed zooming with Ctrl+Wheel for some users
     * fixed issues with cookies filtering
